@@ -1,4 +1,4 @@
-DIST gnome-commander-1.2.8.6.tar.bz2 3478950 RMD160 e7275514321b0d1b8531b6b0ee306e1eaa122e30 SHA1 59748559df7f3549527156e9b559887b0b0c6134 SHA256 6643bc9364b4e3a3cb5d14f4d98fe86212f0a5b69bf7b37815149ac2f285acc7
-EBUILD gnome-commander-1.2.8.6.ebuild 1033 RMD160 6a065f38c9e52937a63f0443e74e85d96ccd4031 SHA1 58813af1bc1565eb9e91a69aaf07a7e8d3ffff96 SHA256 cc571059e090cb64fddf7e6790ebb7722d5ef8d922464efb3d81ed6b46c5c4a2
-MISC ChangeLog 646 RMD160 265509d7af72cdf55252bdb495a1d0730a4fcea9 SHA1 8616e48fb8d8e9d2715e43b1086e383162a0615e SHA256 00b369cb1761514716e505793d6b21f0dc02c39355c45a70742ce00e2c35a545
+DIST gnome-commander-1.2.8.8.tar.bz2 3523946 RMD160 9eac3e6a4058b43c63b86f6fdd27098d722fc3b2 SHA1 0b448cff83590b857be5b21a2a008b4355f481a2 SHA256 5016e109bb10583fba789f8be988a68a832484a354e577eac9731a6a927233f5
+EBUILD gnome-commander-1.2.8.8.ebuild 1004 RMD160 cdcbcd3ac0e2e4cf156d3da49b233605d876bf83 SHA1 181321c0202fb7024f30ba3d5424eff6ca153209 SHA256 938c71d52f5802fe87fb5b901435af2a210a3b3edb244faf6c824f89bf859289
+MISC ChangeLog 769 RMD160 2d1028e39feeb52bae1e7e79e128329974db6d56 SHA1 e4326617bf7814803b484c0a94818a76e645923e SHA256 f6a5b388487744fdc12a58f79e7a2c612245f60b78def6023df0e6ca23ef49fe
 MISC metadata.xml 478 RMD160 cf422075d7c15bae834f7183852a7eb3d957fce7 SHA1 91a77f95c47f4709b59ec287204de16e4c9d7aaa SHA256 918ebdb2173cb4d8bdb22747ca6f567ef8e3473c8ef4d577b37994232e99cb8b
