@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Sep 2010; Rion <rion4ik@gmail.com> -gnome-commander-1.2.8.6.ebuild,
+  +gnome-commander-1.2.8.8.ebuild:
+  new version
+
   21 Jun 2010; Rion <rion4ik@notagmail.com> -gnome-commander-1.2.8.5.ebuild,
   +gnome-commander-1.2.8.6.ebuild, -files/asneeded.patch:
   new version
